<resources>
    <string name="app_name">Money</string>
    <string name="Solde">Solde</string>
    <string name="Courses">Courses</string>
    <string name="AccountName">Nom du compte</string>
    <string name="Password">Mot de passe</string>
    <string name="InitialValue">Solde initial</string>
    <string name="Create">Créer</string>
    <string name="Date">Date</string>
    <string name="Payee">Bénéficiaire</string>
    <string name="Category">Catégorie</string>
    <string name="Value">Montant</string>
    <string name="V">V</string>
    <string name="S">S</string>
    <string name="Debit">Débit</string>
    <string name="Credit">Crédit</string>
    <string name="Cancel">Annuler</string>
    <string name="Description">Description</string>
    <string name="New">Nouveau</string>
    <string name="Save">Enregistrer</string>

    <string name="InvalidPayee">Destinataire invalide</string>
    <string name="InvalidCategory">Catégorie invalide</string>
    <string name="InvalidValue">Valeur invalide</string>

    <string name="MyAccount">Mon Compte</string>

    <string name="Delete">Supprimer</string>

    <string name="Shared">Partagé</string>

    <string name="NewCategory">Nouvelle catégorie</string>
    <string name="CategoryName">Nom de la catégorie</string>
    <string name="BalancingTime">Equilibrage pour</string>
    <string name="Year">Année</string>
    <string name="Month">Mois</string>

    <string-array name="ColorsName">
        <item>Améthyste</item>
        <item>Rouge</item>
        <item>Jaune</item>
        <item>Vert</item>
        <item>Bleu</item>
    </string-array>

    <string-array name="Month">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string name="Analyse">Analyser</string>
    <string name="MarketShare">Parts</string>
    <string name="Update">Actualiser</string>
    <string name="Between">Entre</string>
    <string name="And">Et</string>

    <string name="MustPay">doit payer</string>
    <string name="MustReceive">doit recevoir</string>

    <string name="LogIn">Connexion</string>
    <string name="ChangeAccount">Changer de compte</string>
    <string name="InvalidPassword">Mot de passe incorrect</string>
    <string name="InvalidName">Nom de compte invalide ou déjà utilisé</string>
    <string name="InvalidInitialValue">Solde initial incorrect</string>
</resources>
