<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/operation_padding"
        android:paddingRight="@dimen/operation_padding"
        android:layout_weight="24"
        android:text="@string/Date"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="18"
        android:text="@string/AccountName"/>

    <TextView
        android:id="@+id/payee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/operation_padding"
        android:paddingRight="@dimen/operation_padding"
        android:background="@drawable/operation_item_color_2"
        android:layout_weight="22"
        android:text="@string/Payee"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/operation_padding"
        android:paddingRight="@dimen/operation_padding"
        android:layout_weight="20"
        android:text="@string/Category"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/operation_padding"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:background="@drawable/operation_item_color_2"
        android:layout_weight="16"
        android:text="@string/Value"/>

</LinearLayout>