<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_weight="50"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Value"
        android:layout_weight="30"/>

    <TextView
        android:id="@+id/marketShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MarketShare"
        android:layout_weight="20"/>

</LinearLayout>