<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/AccountName"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/initialValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InitialValue"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"/>

        <ImageView
            android:id="@+id/colorViewer"
            android:layout_width="0dp"
            android:layout_height="@dimen/contentSize"
            android:layout_weight="20"
            android:layout_margin="@dimen/operation_padding"/>



    </LinearLayout>



</LinearLayout>