<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.Home"
        android:background="@color/light_grey">

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/contentSize"
            android:layout_centerHorizontal="true"
            android:textColor="@color/purple"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <com.le_roux.sylvain.money.Utils.PriceView
            android:id="@+id/balanceAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Solde"
            android:textSize="@dimen/contentSize"
            android:textColor="@color/mid_grey"
            android:layout_below="@id/accountName"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/accountPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyAccount"
            android:background="@color/mid_grey"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/operation_padding"/>

        <Button
            android:id="@+id/coursesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Courses"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/mid_grey"/>

    </RelativeLayout>
</LinearLayout>