<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_analyze_spendings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.le_roux.sylvain.money.Activities.AnalyzeSpendings">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>

    <LinearLayout
        android:id="@+id/dateBoundaries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/Between"
            android:textSize="@dimen/formSize"/>

        <com.le_roux.sylvain.money.Utils.DateView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="37"
            android:layout_marginStart="@dimen/operation_padding"
            android:layout_marginLeft="@dimen/operation_padding"
            android:layout_marginEnd="@dimen/operation_padding"
            android:layout_marginRight="@dimen/operation_padding"
            android:textSize="@dimen/formSize"
            android:background="@color/aero"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="@string/And"
            android:textSize="@dimen/formSize"/>

        <com.le_roux.sylvain.money.Utils.DateView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="37"
            android:layout_marginStart="@dimen/operation_padding"
            android:layout_marginLeft="@dimen/operation_padding"
            android:layout_marginEnd="@dimen/operation_padding"
            android:layout_marginRight="@dimen/operation_padding"
            android:textSize="@dimen/formSize"
            android:background="@color/aero"/>
    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:background="@color/mid_grey"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/operation_padding"/>

    <ListView
        android:id="@+id/spendings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
